--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Baba Hussain</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="css/favicon.ico">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
@@ -13,11 +13,11 @@
 
 <body>
   <div class="top-container">
-    <img class="c1" src="css/images/cloud.png" alt="clod">
+    <img class="c1" src="cloud.png" alt="clod">
     <h1 class="heading">I am Baba Hussain</h1>
     <h2 class="p">a <span class="web">web</span> developer</h2>
-    <img class="m" src="css/images/mountain.png" alt="mountain">
-    <img class="c2" src="css/images/cloud.png" alt="clod">
+    <img class="m" src="mountain.png" alt="mountain">
+    <img class="c2" src="cloud.png" alt="clod">
     </div>
 
     <div class="middle-container">
